alignment fixes
ty cassidy

--- a/stranded/styles.css
+++ b/stranded/styles.css
@@ -43,8 +43,9 @@ footer, .footer {
 
 footer.credits {
 	position: absolute;
-	bottom: 0;
-	margin: 0 9%;
+	bottom: 10px;
+	margin: 0 auto;
+	width: 100%;
 }
 
 li.bbullet {
@@ -54,15 +55,19 @@ li.bbullet {
 }
 
 header.main {
+	position: absolute;
 	text-align: center;
+	width: 100%;
 }
 
 .block {
 	display: block;
+	width: 100%;
 }
 
 .block.center {
 	text-align: center;
+	margin: 0 auto;
 }
 
 .caption {
@@ -117,7 +122,17 @@ h1.block.center {
 .vertalign {
 	position: absolute;
 	top: 50%;
-	margin-top: -10%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.vertalign.video {
+	-webkit-transform: translateY(-47%);
+	-moz-transform: translateY(-47%);
+	-ms-transform: translateY(-47%);
+	transform: translateY(-47%);
 }
 
 /* Scroll Links */
@@ -155,6 +170,13 @@ a.scroll-link{
 	}
 
 /* Scroll Overrides */
+.onepage-pagination {
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
 .onepage-pagination li a:before{
 	background:rgba(255,255,255,.85);
 	box-shadow:0 2px 4px rgba(0,0,0,.75);
